# hmon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/hmon/: embed_plugins.hpp  plugin_abi.h  plugin_manager.hpp  static_plugins.hpp
include/metrics/: cpu.hpp  gpu_darwin.hpp  network.hpp  sensors_fallback.hpp  system.hpp  system_darwin.hpp  types.hpp  version.hpp
src/: main.cpp
src/core/: plugin_manager.cpp  static_plugins.cpp
src/metrics/: cpu.cpp  cpu_darwin.cpp  darwin_utils.hpp  gpu.cpp  gpu_darwin.cpp  linux_utils.hpp  network.cpp  sensors_fallback.cpp  system.cpp  system_darwin.cpp
src/plugins/cpu/: cpu_collector.cpp  cpu_collector.hpp  plugin.cpp
src/plugins/cron/: cron_collector.cpp  cron_collector.hpp  plugin.cpp
src/plugins/database/: database_collector.cpp  database_collector.hpp  plugin.cpp
src/plugins/docker/: docker_collector.cpp  docker_collector.hpp  plugin.cpp
src/plugins/gpu/: gpu_collector.cpp  gpu_collector.hpp  plugin.cpp
src/plugins/ports/: plugin.cpp  ports_collector.cpp  ports_collector.hpp
src/plugins/process/: plugin.cpp  process_collector.cpp  process_collector.hpp
src/plugins/system/: plugin.cpp  system_collector.cpp  system_collector.hpp
src/plugins/systemd/: plugin.cpp  systemd_collector.cpp  systemd_collector.hpp
src/plugins/webserver/: plugin.cpp  webserver_collector.cpp  webserver_collector.hpp
